fix: mobile image responsiveness and list spacing

--- a/normalize.css
+++ b/normalize.css
@@ -23,13 +23,6 @@ body {
   line-height: 1.5;
 }
 
-/* Make images easier to work with */
-img,
-picture {
-  max-width: 100%;
-  display: block;
-}
-
 /* Inherit fonts for inputs and buttons */
 input,
 button,
