--- a/styles.css
+++ b/styles.css
@@ -40,14 +40,39 @@ img {
   margin-bottom: 2.5rem;
 }
 
-ul,
-ol {
-  list-style-position: inside;
-  padding-left: 0.5rem;
-}
-
 li {
   margin-bottom: 1rem;
+}
+
+ol {
+  counter-reset: list-counter;
+}
+
+ul {
+  list-style-position: outside;
+  padding-left: 1rem;
+}
+
+ul li {
+  padding-left: 1rem;
+}
+
+ol li {
+  list-style-type: none;
+  position: relative;
+  padding-left: 2rem;
+}
+
+ol li::before {
+  content: counter(list-counter) ".";
+  counter-increment: list-counter;
+  position: absolute;
+  left: 0;
+  font-weight: bold;
+  color: var(--stone-600);
+  width: 1rem;
+  text-align: right;
+  padding-right: 1rem;
 }
 
 hr {
@@ -56,25 +81,47 @@ hr {
   margin: 2rem 0;
 }
 
+.nutrition-grid {
+  display: grid;
+  gap: 0.75rem;
+  margin-top: 1.5rem;
+}
+
+.grid-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: left;
+  padding: 0 32px;
+}
+
+.nutrition-grid hr {
+  margin: 0;
+  width: 100%;
+}
+
+/******************
+ * Fonts
+ ******************/
+
 h1,
 h2,
 h3 {
   margin-bottom: 1.5rem;
-  color: var(--rose-800);
+  color: var(--brown-800);
+  letter-spacing: 0.5px;
 }
 
 h1 {
+  color: var(--stone-900);
   font-family: "Young Serif", serif;
   font-size: 2.5rem; /* 40px */
   line-height: 100%;
-  letter-spacing: 0px;
 }
 
 h2 {
   font-family: "Young Serif", serif;
   font-size: 1.75rem; /* 28px */
   line-height: 100%;
-  letter-spacing: 0px;
 }
 
 h3 {
@@ -82,7 +129,6 @@ h3 {
   font-weight: 600; /* SemiBold */
   font-size: 1.25rem; /* 20px */
   line-height: 100%;
-  letter-spacing: 0px;
 }
 
 p,
@@ -93,7 +139,7 @@ table,
 }
 p,
 li,
-table {
+span {
   font-family: "Outfit", sans-serif;
   font-weight: 400; /* Regular */
   font-size: 1rem; /* 16px */
@@ -107,4 +153,18 @@ table {
   font-size: 1rem; /* 16px */
   line-height: 150%;
   letter-spacing: 0px;
+}
+
+@media screen and (max-width: 420px) {
+  .container {
+    padding-top: 0;
+    border-radius: 0;
+  }
+  img {
+    width: calc(100% + 5rem); /* 100% + (2.5rem padding × 2) */
+    margin-left: -2.5rem; /* Pull image left by container's padding */
+    margin-right: -2.5rem; /* Pull image right by container's padding */
+    margin-top: 0;
+    border-radius: 0; /* Remove border radius */
+  }
 }
